# LightLM_public_repo

./: .gitignore  HF.ipynb  HF_Colab.ipynb  HF_inference_Colab.ipynb  LightLM_Colab_infer.ipynb  LightLM_Colab_train.ipynb  LightLM_infer_bash.ipynb  LightLM_train_bash.ipynb  convert_to_hf.py  hf_inference.py  infer.py  infer_generate.py  model.py  pyproject.toml  requirements.txt  train-small.py  train.py  trainer.py  upload_to_hub.py
