[project]
name = "lightlm-private"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "datatrove>=0.6.0",
    #"flash-attn>=2.8.3",
    "huggingface_hub>=0.34.4",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
